# gUIO

./: .gitignore  LICENSE  README.md
benchmark/: CMakeLists.txt  build.ps1  build.sh
benchmark/src/: BM_date_time.cpp  readme
examples/FIFO/: CMakeLists.txt  Doxyfile  build.ps1  build.sh  clear.ps1  clear.sh
examples/FIFO/cfg/: _fifo.cfg  _fifo.log_cfg  tx_words.txt
examples/FIFO/src/: globals.cpp  globals.hpp  main.cpp  streams.cpp  streams.hpp
examples/GPIO/: CMakeLists.txt  build.ps1  clear.ps1
examples/GPIO/src/: main.cpp
examples/MMAP/: CMakeLists.txt  Doxyfile  build.ps1  build.sh  clear.ps1
examples/MMAP/cfg/: _mmap.cfg  _mmap.log_cfg  ps2pl_registers.cfg
examples/MMAP/src/: globals.cpp  globals.hpp  main.cpp
examples/MUDP/: CMakeLists.txt  build.ps1  build.sh  clear.ps1
examples/MUDP/cfg/: _mudp.cfg  example_MUDP.cfg
examples/MUDP/sdr/: definitions.hpp  sdr_ad9361.cpp  sdr_ad9361.hpp  sdr_ad9361_api.cpp  sdr_ad9361_api.hpp  sdr_if.cpp  sdr_if.hpp  spi_if.cpp  spi_if.hpp  stime.cpp
examples/MUDP/src/: GDecoder.hpp  GEncoder.hpp  GMessage.cpp  GMessage.hpp  GPacket.cpp  GPacket.hpp  f_ad9361.hpp  f_gm_dh.hpp  f_gm_mc.hpp  f_hssl0.hpp  f_hssl1.hpp  f_hssl2.hpp  main.cpp
examples/QSPI/: CMakeLists.txt
examples/QSPI/src/: main.cpp
examples/REGS/: CMakeLists.txt  build.ps1  build.sh  clear.ps1
examples/REGS/cfg/: registers_values.cfg
examples/REGS/src/: main.cpp
examples/lib/: Buffer.cpp  Buffer.hpp  FiFo.cpp  FiFo.hpp
lib/: FiFo.cpp  FiFo.hpp  GArray.hpp  GArrayRoller.hpp  GBarrier.hpp  GBuffer.cpp  GBuffer.hpp  GDecoder.hpp  GDefine.hpp  GEncoder.hpp  GFiFo.cpp  GFiFo.hpp  GLogger.cpp  GLogger.hpp  GMessage.cpp  GMessage.hpp  GOptions.cpp  GOptions.hpp  GPacket.cpp  GPacket.hpp  GProfile.hpp  GString.hpp  GUdpClient.cpp  GUdpClient.hpp  GUdpServer.cpp  GUdpServer.hpp  GUdpStreamWriter.hpp  GWorksCoupler.hpp
sdr/: definitions.hpp  sdr_ad9361.cpp  sdr_ad9361_api.cpp  sdr_if.cpp  sdr_if.hpp  spi_if.cpp  spi_if.hpp  stime.cpp  stime.hpp
src/: GAXIQuadSPI.cpp  GAXIQuadSPI.hpp  GFIFOdevice.cpp  GFIFOdevice.hpp  GLogger.cpp  GLogger.hpp  GMAPdevice.cpp  GMAPdevice.hpp  GMEMdevice.cpp  GMEMdevice.hpp  GProfile.hpp  GRegisters.cpp  GRegisters.hpp  GSPIdevice.cpp  GSPIdevice.hpp  GUIOdevice.cpp  GUIOdevice.hpp  registers.cpp  registers.hpp
uio/: GAXIQuadSPI.cpp  GAXIQuadSPI.hpp  GFIFOdevice.cpp  GFIFOdevice.hpp  GMAPdevice.cpp  GMAPdevice.hpp  GRegisters.cpp  GRegisters.hpp  GSPIdevice.cpp  GSPIdevice.hpp  GUIOdevice.cpp  GUIOdevice.hpp
uml/: GArrayRoller.md  GWorksCoupler.md
uml/examples/: FIFO_rx_master_rx_waiter.md
uml/lib/: GArrayRoller.md  GWorksCoupler.md
